Major changes for paper draft v2.

--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -17,8 +17,7 @@
 \usepackage{booktabs}
 \urlstyle{same}
 
-
-\title{Hand Gesture Recognition on Arduino Using Machine Learning and Ambient Light}
+\title{Hand Gesture Recognition on Arduino Using Photodiodes and Neural Networks}
 
 \author{
 Matthew Lipski\\
@@ -36,23 +35,27 @@ r.zhu-1@tudelft.nl
 
 \maketitle
 
-%\input{sections/abstract}
+\input{sections/abstract}
+
+\input{sections/acknowledgements}
 
 \input{sections/introduction}
 
 \input{sections/background}
-%
+
 \input{sections/system_overview}
-%
-\input{sections/model_design.tex}
-%
-%\input{sections/responsible_research}
-%
-%\input{sections/discussion}
-%
-%\input{sections/conclusion_and_future_work}
-%
-%\input{sections/appendix}
+
+\input{sections/model_design}
+
+\input{sections/model_implementation}
+
+\input{sections/results}
+
+\input{sections/related_work}
+
+\input{sections/responsible_research}
+
+\input{sections/conclusion}
 
 \bibliographystyle{plain}
 \bibliography{references}
