--- a/paper/sections/responsible_research.tex
+++ b/paper/sections/responsible_research.tex
@@ -1,3 +1,1 @@
-\section{Responsible Research}
-Reflect on the ethical aspects of your research and discuss the reproducibility of your methods.
-Note that although in many published works there is no such a section (it may be part of some meta-information collected by the journal, or part of the discussion section), we require you to think (and report) about this as part of this course.
+\section{Responsible Research}\label{sec:responsible-research}
